atualizaçao product.py e decoradores

--- a/web2py/applications/marisacatto/views/customer/customers.html
+++ b/web2py/applications/marisacatto/views/customer/customers.html
@@ -6,6 +6,7 @@
 
 {{for customer in query:}}
 {{ =customer.id }} {{ =customer.nome }}
-<a href="{{=URL('costumer', 'costumers', args=[customer.id, customer.nome])}}" class="btn btn-primary" role="button">Comprar Agora</a>
+
+<a href="" class="btn btn-primary" role="button">Comprar Agora</a>
 {{ pass }}
 {{ end }}
