criado função customer_selected para selecionar o cliente na hora do fechamento do servico

--- a/web2py/applications/marisacatto/views/default/cart_form.html
+++ b/web2py/applications/marisacatto/views/default/cart_form.html
@@ -1,9 +1,15 @@
 {{extend 'base.html'}}
 {{block central}}
 
+{{ if(session.cliente == ''):}}
+{{ =form }}
+{{ pass }}
+
 {{=form_product}}
 
 <table width=800px>
+
+    <tr>Cliente: {{ =session.cliente[1] }}</tr>
     <tr  bgcolor="silver">
         <td>Id</td>
         <td>nome </td>
